--- a/entrar.html
+++ b/entrar.html
@@ -43,6 +43,29 @@
 </nav>
 
 
+   <form role="form">
+  <div class="form-group">
+    <label for="email">Email:</label>
+    <input type="email" class="form-control" id="email">
+
+    <label for="pwd">Contraseña:</label>
+    <input type="password" class="form-control" id="pwd">
+  </div>
+  <div class="checkbox">
+    <label><input type="checkbox"> Recordar</label>
+  </div>
+  <button type="submit" class="btn btn-default">Entrar</button>
+</form>
+<style>
+
+.form-group{
+  margin: 10px; 
+  width: 200px;
+  
+}
+</style>
+
+
 
 
 
