--- a/actividades.html
+++ b/actividades.html
@@ -33,10 +33,10 @@
       </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Inicio</a></li>
-        <li><a href="#">Cursos</a></li>
-        <li><a href="#">Actividades</a></li>
-        <li><a href="#">Equipo</a></li>
+        <li class="active"><a href="index.html">Inicio</a></li>
+        <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="actividades.html">Actividades</a></li>
+        <li><a href="equipo.html">Equipo</a></li>
       </ul>
         </div>
   </div>
