--- a/actividades.html
+++ b/actividades.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <style>
@@ -45,13 +46,12 @@
 <!--//Grid stacked/Horizontal//Comentario-->
 <div class="container-fluid">
   <h1>Administrador de tareas</h1>
-  <p>BIENVENIDO</p>
   <div class="row">
     <div class="col-sm-3" style="background-color:LightBlue;"><!--//Derecho-->
       <h3>Usuario</h3>
       <!--Imagen del usuario-->
 <div class="container">
-    <img src="Actividades_Img1.jpg" class="img-circle" alt="Imagen usuario" width="204" height="136"> 
+    <img src="equipo1.jpg" class="img-circle" alt="Imagen usuario" width="204" height="136"> 
   <em><h5>Aqui Nombre_usuario</h5></em>
 </div>
     </div>
@@ -73,10 +73,26 @@
        </tbody>
          </table>
      </div>
+     <div class="progress"><!--Progreso-->
+  <div class="progress-bar progress-bar-striped active" role="progressbar"
+  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%">
+    100%
+  </div>
+</div>
     </div>
   </div>
 </div>
 <!--Termina grid horizontal-->
+<p align="left">
+<div class="caja-redes"><!--Redes Sociales-->
+   <a href="#" class="icon-button linkedin"><i class="icon-linkedin"></i><span></span></a>
+   <a href="#" class="icon-button pinterest"><i class="icon-pinterest"></i><span></span></a>
+   <a href="#" class="icon-button twitter"><i class="icon-twitter"></i><span></span></a>
+   <a href="#" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
+   <a href="#" class="icon-button google-plus"><i class="icon-google-plus"></i><span></span></a>
+</div>
+</p>
+
 <footer class="container-fluid text-center" style="background-color:black;">
   <p>Materia | Programacion web</p>
 </footer>
