--- a/cursos.html
+++ b/cursos.html
@@ -1,8 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-<head>
+<title>Programacion Web</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <style>
+   
+    .navbar {
+      margin-bottom: 0;
+      border-radius: 0;
+    }
+    
+    
+    footer {
+      background-color: #f2f2f2;
+      padding: 25px;
+    }
+    </style>
+</head>
 <body>
-<p>pagina cursos</p>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Inicio</a></li>
+        <li><a href="#">Cursos</a></li>
+        <li><a href="#">Actividades</a></li>
+        <li><a href="#">Equipo</a></li>
+      </ul>
+        </div>
+  </div>
+</nav>
+
+<body>
+<div class="container">
+  <h2>Cursos</h2>
+  <p>The .table-bordered class adds borders to a table:</p>            
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Imparte</th>
+        <th>Tipo de curso</th>
+        <th>Descrpccion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John
+        <img src="" >
+        </td>
+        <td>Programacion</td>
+        <td>
+        	<p>Fecha inicio: 10 de diciembre del 1015 </p>
+        	<p>Fecha fin: al 20 de febrero del 2016</p>
+        </td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Matematicas</td>
+        <td><p> Fecha fin: al 30 de febrero del 2016</p>
+             <p>Fecha fin: al 30 de mayo del 2015</p>
+        </td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Base de datos</td>
+        <td> <p> Fecha fin: al 15 de marzo del 2016</p>
+             <p>Fecha fin: al 30 de junio del 2016</p></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+	
+<footer class="container-fluid text-center" style="background-color:black;">
+  <p>Materia | Programacion web</p>
+</footer>
+
 </body>
+
+
 </html>
