Color y modificaciones diseño

--- a/actividades.html
+++ b/actividades.html
@@ -47,15 +47,16 @@
 <div class="container-fluid">
   <h1>Administrador de tareas</h1>
   <div class="row">
-    <div class="col-sm-3" style="background-color:LightBlue;"><!--//Derecho-->
-      <h3>Usuario</h3>
+    <div class="col-sm-3" style="background-color:white;"><!--//Derecho-->
+      <!--<h3>Usuario</h3>-->
       <!--Imagen del usuario-->
 <div class="container">
+	</br>
     <img src="equipo1.jpg" class="img-circle" alt="Imagen usuario" width="204" height="136"> 
   <em><h5>Aqui Nombre_usuario</h5></em>
 </div>
     </div>
-    <div class="col-sm-9" style="background-color:Lavender;"><!--//Izquierdo-->
+    <div class="col-sm-9" style="background-color:DeepSkyBlue;"><!--//Izquierdo-->
       <div class="container">
        <h3>Tareas</h3>    
          <table class="table table-striped"><!--//Crear Tabla dentro del grid2-->
@@ -69,6 +70,10 @@
           <tr>
            <td>Curso</td>
            <td>Impartir el curso de MEAN del 1 de enero al 20 de febrero del 2015</td>
+          </tr>
+          <tr>
+          	<td>Curso</td>
+          	<td>Impartir curso2</td>
           </tr>
        </tbody>
          </table>
