Modificaciones en Actividades y en Cursos

--- a/actividades.html
+++ b/actividades.html
@@ -56,7 +56,7 @@
   <em><h5>Aqui Nombre_usuario</h5></em>
 </div>
     </div>
-    <div class="col-sm-9" style="background-color:DeepSkyBlue;"><!--//Izquierdo-->
+    <div class="col-sm-9" style="background-color:PaleTurquoise;"><!--//Izquierdo-->
       <div class="container">
        <h3>Tareas</h3>    
          <table class="table table-striped"><!--//Crear Tabla dentro del grid2-->
@@ -69,7 +69,7 @@
         <tbody>
           <tr>
            <td>Curso</td>
-           <td>Impartir el curso de MEAN del 1 de enero al 20 de febrero del 2015</td>
+           <td>Impartir el curso de MEAN</td>
           </tr>
           <tr>
           	<td>Curso</td>
@@ -88,15 +88,20 @@
   </div>
 </div>
 <!--Termina grid horizontal-->
-<p align="left">
+<div class="alert alert-info"><!--Alerta infomativa-->
+  <strong>¡Informacion!</strong> Se muestran las tareas asiganadas al usuario
+</div>
+
 <div class="caja-redes"><!--Redes Sociales-->
+<p align="center">
    <a href="#" class="icon-button linkedin"><i class="icon-linkedin"></i><span></span></a>
    <a href="#" class="icon-button pinterest"><i class="icon-pinterest"></i><span></span></a>
    <a href="#" class="icon-button twitter"><i class="icon-twitter"></i><span></span></a>
    <a href="#" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
    <a href="#" class="icon-button google-plus"><i class="icon-google-plus"></i><span></span></a>
+   </p>
 </div>
-</p>
+
 
 <footer class="container-fluid text-center" style="background-color:black;">
   <p>Materia | Programacion web</p>
