--- a/cursos.html
+++ b/cursos.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <style>
    
@@ -45,44 +46,82 @@
 <body>
 <div class="container">
   <h2>Cursos</h2>
-  <p>The .table-bordered class adds borders to a table:</p>            
+  </br>            
   <table class="table table-bordered">
     <thead>
       <tr>
         <th>Imparte</th>
         <th>Tipo de curso</th>
-        <th>Descrpccion</th>
+        <th>Descripción</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>John
-        <img src="" >
-        </td>
-        <td>Programacion</td>
         <td>
-        	<p>Fecha inicio: 10 de diciembre del 1015 </p>
-        	<p>Fecha fin: al 20 de febrero del 2016</p>
+        <center>
+        <img src="equipo2.jpg" class="img-circle" alt="Imagen usuario" width="60" height="50">
+        <h5>
+        <em>
+        Citlali
+        </em>
+        </h5>
+        </center>
+        </td>
+        <td><h4><n>Programacion</n></h4></td>
+        <td>
+        	<p>
+          <em>Fecha inicio: 10 de diciembre del 2015 </p>
+        	<p>Fecha fin: 20 de febrero del 2016</p>
+          </em>
         </td>
       </tr>
       <tr>
-        <td>Mary</td>
-        <td>Matematicas</td>
-        <td><p> Fecha fin: al 30 de febrero del 2016</p>
-             <p>Fecha fin: al 30 de mayo del 2015</p>
+        <td><center>
+        <img src="equipo1.jpg" class="img-circle" alt="Imagen usuario" width="60" height="50">
+        <h5>
+        <em>
+        Liz
+        </em>
+        </h5>
+        </center></td>
+        <td><h4><n>Matematicas</n></h4></td>
+        <td><p> 
+        <em>Fecha inicio: al 30 de febrero del 2016</p>
+             <p>Fecha fin: al 30 de mayo del 2016</p>
+             </em>
         </td>
       </tr>
       <tr>
-        <td>July</td>
-        <td>Base de datos</td>
-        <td> <p> Fecha fin: al 15 de marzo del 2016</p>
-             <p>Fecha fin: al 30 de junio del 2016</p></td>
+        <td><center>
+        <img src="equipo3.jpg" class="img-circle" alt="Imagen usuario" width="60" height="50">
+        <h5>
+        <em>
+        Christian
+        </em>
+        </h5>
+        </center></td>
+        <td><h4><n>Base de datos</n></h4></td>
+        <td><p> 
+        <em>Fecha inicio: al 30 de febrero del 2016</p>
+             <p>Fecha fin: al 30 de mayo del 2016</p>
+             </em>
+        </td>
       </tr>
     </tbody>
   </table>
 </div>
-
-	
+<div class="alert alert-success">
+  <strong>¡Cursos!</strong> Informacion de cursos
+</div>
+	<div class="caja-redes"><!--Redes Sociales-->
+<p align="center">
+   <a href="#" class="icon-button linkedin"><i class="icon-linkedin"></i><span></span></a>
+   <a href="#" class="icon-button pinterest"><i class="icon-pinterest"></i><span></span></a>
+   <a href="#" class="icon-button twitter"><i class="icon-twitter"></i><span></span></a>
+   <a href="#" class="icon-button facebook"><i class="icon-facebook"></i><span></span></a>
+   <a href="#" class="icon-button google-plus"><i class="icon-google-plus"></i><span></span></a>
+   </p>
+</div>
 <footer class="container-fluid text-center" style="background-color:black;">
   <p>Materia | Programacion web</p>
 </footer>
