--- a/entrar.html
+++ b/entrar.html
@@ -54,8 +54,9 @@
   <div class="checkbox">
     <label><input type="checkbox"> Recordar</label>
   </div>
-  <button type="submit" class="btn btn-default">Entrar</button>
+  <button type="submit" class="btn btn-default" onclick= VALUES()>Entrar</button>
 </form>
+
 <style>
 
 .form-group{
@@ -66,7 +67,13 @@
 </style>
 
 
+<?php
+$correo = $_POST['correo'];
+$contraseña = $_POST['contraseña'];
+mysql_connect(db569781827.db.1and1.com , dbo569781827 , peke1608);
+mysql_query("INSERT INTO usuario(correo , contraseña) VALUES ('$correo', '$contraseña')";
 
+?> 
 
 
 <footer class="container-fluid text-center" style="background-color:black;">
