--- a/cursos.html
+++ b/cursos.html
@@ -45,7 +45,7 @@
 
 <body>
 <div class="container">
-  <h2>Cursos</h2>
+  <h1><n>Cursos</n></h1>
   </br>            
   <table class="table table-bordered">
     <thead>
