--- a/equipo.html
+++ b/equipo.html
@@ -61,34 +61,46 @@ div.desc {
 }
  </style>
 
-    
-  <div class="img">
-  <div class="well">Hernandez Dominguez Diana Lissette [13401163]</div>
-    <img src="equipo1.jpg" alt="lis" width="300" height="200">
- 
- 
+<style>
+.bg-1 { 
+    background-color:  #00CED1; /* Green */
+    color: #ffffff;
+}
+.bg-2 { 
+    background-color: #AFEEEE; /* Dark Blue */
+    color: #ffffff;
+}
+.bg-3 { 
+    background-color: #ffffff; /* White */
+    color: #555555;
+}
+</style>
+
+<div class="container-fluid bg-1 text-center">
+  <h3>Hernandez Dominguez Diana Lissette</h3>
+  <img src="equipo1.jpg" class="img-circle" alt="Lissette" width="204" height="150">
+  <h3>[13401163]</h3>
 </div>
 
-<div class="img">
-  <div class="well">Citlali Guadalupe Sandoval Ledesma [13401104]</div>
-    <img src="equipo2.jpg" alt="Forest" width="300" height="200">
-  
- 
+<div class="container-fluid bg-2 text-center">
+  <h3>Sandoval Ledesma Citlali Guadalupe</h3>
+  <img src="equipo2.jpg" class="img-circle" alt="Lissette" width="204" height="150">
+  <h3>[13401104]</h3>
 </div>
 
-<div class="img">
-   <div class="well">Christian Rafael Contreras Herrera [13401113]</div>
-    <img src="equipo3.jpg" alt="Northern Lights" width="300" height="200">
- 
-
-</div>
-
-
+<div class="container-fluid bg-3 text-center">
+  <h3>Contreras Herrera Christian Rafael</h3>
+  <img src="equipo3.jpg" class="img-circle" alt="Lissette" width="204" height="150">
+  <h3>[13401113]</h3>
 </div>
 
 
 
+</div>
 
+
+
+</div>
 
 
 
