--- a/actividades.html
+++ b/actividades.html
@@ -53,7 +53,7 @@
 $usuario = $_POST['idusuario'];
 $descripcion = $_POST['descripcion'];
 $link= mysql_connect(db569781827.db.1and1.com , dbo569781827 , peke1608);
-$show= mysql_query("Select idusuario from actividades,$link";
+$show= mysql_query("Select idusuario from actividades,$link");
 
 ?> 
     
