--- a/cursos.html
+++ b/cursos.html
@@ -34,10 +34,10 @@
       </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Inicio</a></li>
-        <li><a href="#">Cursos</a></li>
-        <li><a href="#">Actividades</a></li>
-        <li><a href="#">Equipo</a></li>
+        <li class="active"><a href="index.html">Inicio</a></li>
+        <li><a href="cursos.html">Cursos</a></li>
+        <li><a href="actividades.html">Actividades</a></li>
+        <li><a href="equipo.html">Equipo</a></li>
       </ul>
         </div>
   </div>
@@ -71,7 +71,9 @@
         <td>
         	<p>
           <em>Fecha inicio: 10 de diciembre del 2015 </p>
+          <h5> <?php echo $inicio;?></h5>
         	<p>Fecha fin: 20 de febrero del 2016</p>
+          <h5> <?php echo $fin;?></h5>
           </em>
         </td>
       </tr>
@@ -87,7 +89,9 @@
         <td><h4><n>Matematicas</n></h4></td>
         <td><p> 
         <em>Fecha inicio: al 30 de febrero del 2016</p>
+        <h5> <?php echo $inicio;?></h5>
              <p>Fecha fin: al 30 de mayo del 2016</p>
+             <h5> <?php echo $fin;?></h5>
              </em>
         </td>
       </tr>
@@ -103,13 +107,20 @@
         <td><h4><n>Base de datos</n></h4></td>
         <td><p> 
         <em>Fecha inicio: al 30 de febrero del 2016</p>
+        <h5> <?php echo $inicio;?></h5>
              <p>Fecha fin: al 30 de mayo del 2016</p>
-             </em>
+            <h5> <?php echo $fin;?></h5> </em>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+  <?php
+
+$link= mysql_connect(db569781827.db.1and1.com , dbo569781827 , peke1608);
+$inicio= mysql_query("Select fechainicio from tarea,$link");
+$fin= mysql_query("Select fechafin from tarea,$link");
+?> 
 <div class="alert alert-success">
   <strong>¡Cursos!</strong> Informacion de cursos
 </div>
